# rust-memcache

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  circle.yml  client.rs  memcache.rs  tea.yaml
.github/: dependabot.yml
.github/workflows/: ci.yaml
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
examples/pooled/: Cargo.toml
examples/pooled/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
memcache/: Cargo.toml
memcache/src/: error.rs  lib.rs
memcache/src/protocol/: ascii.rs  binary.rs  binary_packet.rs  mod.rs
memcache/src/stream/: mod.rs
src/: async_client.rs  cacheable.rs  client.rs  connectable.rs  connection.rs  error.rs  ffi.rs  lib.rs  memcache.rs  options.rs  packet.rs  udp_stream.rs  value.rs
src/protocol/: ascii.rs  binary.rs  binary_packet.rs  mod.rs
src/stream/: mod.rs  udp_stream.rs
tests/: connect.rs  counter.rs  destructor.rs  exist.rs  flush.rs  memcache.rs  raw.rs  setup_tests.sh  test_ascii.rs  test_connection.rs  test_options.rs  test_serialize.rs  test_value.rs  tests.rs
tests/assets/: RUST_MEMCACHE_TEST_CERT.crt  RUST_MEMCACHE_TEST_CERT.key  client.crt  client.key  localhost.crt  localhost.key
